# auto-profit-trader

./: .dockerignore  .gitignore  .pre-commit-config.yaml  API_SETUP_GUIDE.md  AUTONOMOUS_OPERATION.md  AutoProfitTrader.ps1  AutoProfitTrader_Simple.ps1  COMPLETE_SETUP_GUIDE.md  COMPLETE_SYSTEM_SUMMARY.md  DEMO_KRAKEN_GUIDE.md  DEVELOPMENT.md  DOCKER.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  MONITORING_GUIDE.md  README.md  SYSTEM_READY.md  UK_STATUS_UPDATE.md  UK_TRADING_GUIDE.md  WINDOWS_COMPATIBILITY_FIXES.md  autotrader.service  bandit-report.json  bandit-test-report.json  config.json  dashboard.py  dashboard_launcher.ps1  demo_kraken.ps1  deploy-remote.ps1  deploy-remote.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  docker-deploy.sh  enhanced_dashboard.py  install.ps1  launch_dashboard.ps1  launch_dashboard_clean.ps1  main.py  monitor.ps1  performance.json  (+17 more)
.github/workflows/: ci.yml
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
src/core/: trading_engine.py  trading_engine_old.py
src/demo/: demo_kraken.py
src/exchanges/: exchange_manager.py
src/notifications/: notifier.py
src/risk_management/: portfolio_manager.py
src/security/: crypto_manager.py
src/strategies/: trading_strategies.py
src/utils/: config_manager.py  error_handling.py  logger.py  validators.py
tests/: conftest.py
tests/integration/: test_system_integration.py
tests/unit/security/: test_crypto_manager.py
tests/unit/utils/: test_config_manager.py  test_error_handling.py  test_logger.py  test_validators.py
